# hand

opencv/: Makefile  gesture_cpp.cpp  hand.cpp  main.cpp  palm  sample.cpp
opencv2/: Makefile  main.cpp  palm
tflite/: CMakeLists.txt
tflite/src/: CMakeLists.txt  DetectionPostProcess.cpp  DetectionPostProcess.hpp  HandDetection.cpp  HandDetection.hpp  Handlandmark.cpp  Handlandmark.hpp  ModelLoader.cpp  ModelLoader.hpp  main.cpp
